# ArtifactLab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: OASIS_inference_plot.py  fastmri_distortion_plot.py  fastmri_inference_plot.py  fastmri_reconstruction_plot.py  plot.py
mri_recon/: __init__.py
mri_recon/datasets/: __init__.py  base.py  fastmri.py
mri_recon/datasets/fixtures/: fastmri_sample_singlecoil.h5
mri_recon/distortions/: OLD_resolution.py  __init__.py  artifacts.py  base.py  biasfield.py  ghosting.py  motion.py  noise.py  resolution.py  sharpness.py  undersampling.py
mri_recon/metrics/: __init__.py  base.py  image.py  nonreference.py  reference.py
mri_recon/reconstruction/: OLD_undersampled.py  __init__.py  _fastmri_unet.py  base.py  classic.py  deep.py  deepinverse.py  inference.py  undersampled.py
mri_recon/utils/: __init__.py  io.py  oasis_adapter.py  plot.py
tests/: test_datasets.py  test_distortions.py  test_distortions_andrew.py  test_metrics.py  test_reconstruction.py  test_reconstructions.py  test_reconstructions_andrew.py  test_utils_io.py
tests/fixtures/fastmri/train/: sample_001.json
